--- a/index.html
+++ b/index.html
@@ -212,12 +212,27 @@
         <!-- partners -->
         <div class="mil-partners mil-p-90-60">
             <div class="container">
+                <div class="col-md-6 col-xl-6">
+
+                    <h2 class="mil-mb-30">Our Partners</h2>
+
+                </div>
                 <div class="mil-partners-frame">
                     <a href="#."><img src="https://navipromotions.in/img/partners/1.png" alt="partner"></a>
                     <a href="#."><img src="https://navipromotions.in/img/partners/2.png" alt="partner"></a>
                     <a href="#."><img src="https://navipromotions.in/img/partners/3.png" alt="partner"></a>
                     <a href="#."><img src="https://navipromotions.in/img/partners/4.png" alt="partner"></a>
                     <a href="#."><img src="https://navipromotions.in/img/partners/5.png" alt="partner"></a>
+                    <a href="#."><img src="https://navipromotions.in/img/partners/6.png" alt="partner"></a>
+                    <a href="#."><img src="https://navipromotions.in/img/partners/1.png" alt="partner"></a>
+                    <a href="#."><img src="https://navipromotions.in/img/partners/2.png" alt="partner"></a>
+                    <a href="#."><img src="https://navipromotions.in/img/partners/3.png" alt="partner"></a>
+                    <a href="#."><img src="https://navipromotions.in/img/partners/4.png" alt="partner"></a>
+                    <a href="#."><img src="https://navipromotions.in/img/partners/5.png" alt="partner"></a>
+                    <a href="#."><img src="https://navipromotions.in/img/partners/6.png" alt="partner"></a>
+                    <a href="#."><img src="https://navipromotions.in/img/partners/6.png" alt="partner"></a>
+                    <a href="#."><img src="https://navipromotions.in/img/partners/6.png" alt="partner"></a>
+                    <a href="#."><img src="https://navipromotions.in/img/partners/6.png" alt="partner"></a>
                     <a href="#."><img src="https://navipromotions.in/img/partners/6.png" alt="partner"></a>
                 </div>
             </div>
@@ -494,6 +509,7 @@
                 </div>
 
                 <div class="swiper-container mil-works-slider mil-mb-90">
+
                     <div class="swiper-wrapper">
 
                         <div class="swiper-slide">
@@ -508,7 +524,7 @@
                                         <!-- <h6>by: <span class="mil-accent">Jane Meldrum</span></h6> -->
                                     </div>
                                     <div class="mil-card-text">
-                                        <p>Enhancing security through advanced surveillance solutions.</p>
+                                        <p>Web Application Development</p>
                                     </div>
                                 </div>
                             </a>
@@ -527,7 +543,7 @@
                                         <!-- <h6>by: <span class="mil-accent">Nguta Ithya</span></h6> -->
                                     </div>
                                     <div class="mil-card-text">
-                                        <p>Innovative solutions for fiberglass engineering.</p>
+                                        <p>Web Application Development</p>
                                     </div>
                                 </div>
                             </a>
@@ -546,7 +562,7 @@
                                         <!-- <h6>by: <span class="mil-accent">Roy Bricks</span></h6> -->
                                     </div>
                                     <div class="mil-card-text">
-                                        <p>Bringing literature to the digital marketplace.</p>
+                                        <p>Web Application Development</p>
                                     </div>
                                 </div>
                             </a>
@@ -557,7 +573,7 @@
 
                             <a href="project4.html" class="mil-card">
                                 <div class="mil-cover-frame">
-                                    <img src="https://navipromotions.in/img/images/project3.avif" alt="project">
+                                    <img src="https://navipromotions.in/img/projects/alagu gym 1.jpg" alt="project">
                                 </div>
                                 <div class="mil-description">
                                     <div class="mil-card-title">
@@ -565,7 +581,7 @@
                                         <!-- <h6>by: <span class="mil-accent">Roy Bricks</span></h6> -->
                                     </div>
                                     <div class="mil-card-text">
-                                        <p>Empowering fitness with a digital edge.</p>
+                                        <p>Web Application Development</p>
                                     </div>
                                 </div>
                             </a>
@@ -576,7 +592,7 @@
 
                             <a href="project5.html" class="mil-card">
                                 <div class="mil-cover-frame">
-                                    <img src="https://navipromotions.in/img/images/project3.avif" alt="project">
+                                    <img src="https://navipromotions.in/img/projects/dental care1.avif" alt="project">
                                 </div>
                                 <div class="mil-description">
                                     <div class="mil-card-title">
@@ -584,7 +600,7 @@
                                         <!-- <h6>by: <span class="mil-accent">Roy Bricks</span></h6> -->
                                     </div>
                                     <div class="mil-card-text">
-                                        <p>Enhancing dental care with a seamless digital experience.</p>
+                                        <p>Web Application Development</p>
                                     </div>
                                 </div>
                             </a>
@@ -595,7 +611,7 @@
 
                             <a href="project6.html" class="mil-card">
                                 <div class="mil-cover-frame">
-                                    <img src="https://navipromotions.in/img/images/project3.avif" alt="project">
+                                    <img src="img/images/gemini1.avif" alt="project">
                                 </div>
                                 <div class="mil-description">
                                     <div class="mil-card-title">
@@ -603,7 +619,7 @@
                                         <!-- <h6>by: <span class="mil-accent">Roy Bricks</span></h6> -->
                                     </div>
                                     <div class="mil-card-text">
-                                        <p>Showcasing financial expertise with a modern web presence.</p>
+                                        <p>One-Page Website Development</p>
                                     </div>
                                 </div>
                             </a>
@@ -614,7 +630,7 @@
 
                             <a href="project7.html" class="mil-card">
                                 <div class="mil-cover-frame">
-                                    <img src="https://navipromotions.in/img/images/project3.avif" alt="project">
+                                    <img src="img/images/ara1.jpg" alt="project">
                                 </div>
                                 <div class="mil-description">
                                     <div class="mil-card-title">
@@ -622,7 +638,7 @@
                                         <!-- <h6>by: <span class="mil-accent">Roy Bricks</span></h6> -->
                                     </div>
                                     <div class="mil-card-text">
-                                        <p>Showcasing beauty through impactful design and smart promotion.</p>
+                                        <p>Banner Design</p>
                                     </div>
                                 </div>
                             </a>
@@ -633,7 +649,7 @@
 
                             <a href="project8.html" class="mil-card">
                                 <div class="mil-cover-frame">
-                                    <img src="https://navipromotions.in/img/images/project3.avif" alt="project">
+                                    <img src="img/images/athithya1.avif" alt="project">
                                 </div>
                                 <div class="mil-description">
                                     <div class="mil-card-title">
@@ -641,7 +657,7 @@
                                         <!-- <h6>by: <span class="mil-accent">Roy Bricks</span></h6> -->
                                     </div>
                                     <div class="mil-card-text">
-                                        <p>Showcasing construction excellence through design.</p>
+                                        <p>Banner design</p>
                                     </div>
                                 </div>
                             </a>
@@ -652,7 +668,7 @@
 
                             <a href="project9.html" class="mil-card">
                                 <div class="mil-cover-frame">
-                                    <img src="https://navipromotions.in/img/images/project3.avif" alt="project">
+                                    <img src="img/images/shobi1.jpg" alt="project">
                                 </div>
                                 <div class="mil-description">
                                     <div class="mil-card-title">
@@ -660,7 +676,7 @@
                                         <!-- <h6>by: <span class="mil-accent">Roy Bricks</span></h6> -->
                                     </div>
                                     <div class="mil-card-text">
-                                        <p>Empowering beauty brands through creative visuals and smart promotion.</p>
+                                        <p>Banner Design </p>
                                     </div>
                                 </div>
                             </a>
@@ -671,7 +687,7 @@
 
                             <a href="project10.html" class="mil-card">
                                 <div class="mil-cover-frame">
-                                    <img src="https://navipromotions.in/img/images/project3.avif" alt="project">
+                                    <img src="img/images/lavanya1.avif" alt="project">
                                 </div>
                                 <div class="mil-description">
                                     <div class="mil-card-title">
@@ -679,7 +695,7 @@
                                         <!-- <h6>by: <span class="mil-accent">Roy Bricks</span></h6> -->
                                     </div>
                                     <div class="mil-card-text">
-                                        <p>Beautifying brands through visual storytelling.</p>
+                                        <p>Poster Design</p>
                                     </div>
                                 </div>
                             </a>
@@ -690,7 +706,7 @@
 
                             <a href="project11.html" class="mil-card">
                                 <div class="mil-cover-frame">
-                                    <img src="https://navipromotions.in/img/images/project3.avif" alt="project">
+                                    <img src="img/images/shobi11.jpg" alt="project">
                                 </div>
                                 <div class="mil-description">
                                     <div class="mil-card-title">
@@ -698,7 +714,7 @@
                                         <!-- <h6>by: <span class="mil-accent">Roy Bricks</span></h6> -->
                                     </div>
                                     <div class="mil-card-text">
-                                        <p>Amplifying beauty and elegance through impactful graphic design.</p>
+                                        <p>Poster Design</p>
                                     </div>
                                 </div>
                             </a>
@@ -710,7 +726,7 @@
 
                             <a href="project12.html" class="mil-card">
                                 <div class="mil-cover-frame">
-                                    <img src="https://navipromotions.in/img/images/project3.avif" alt="project">
+                                    <img src="img/images/toyota1.jpg" alt="project">
                                 </div>
                                 <div class="mil-description">
                                     <div class="mil-card-title">
@@ -718,7 +734,7 @@
                                         <!-- <h6>by: <span class="mil-accent">Roy Bricks</span></h6> -->
                                     </div>
                                     <div class="mil-card-text">
-                                        <p>Showcasing excellence in automobiles through dynamic video marketing.</p>
+                                        <p>Video Marketing</p>
                                     </div>
                                 </div>
                             </a>
@@ -730,7 +746,7 @@
 
                             <a href="project13.html" class="mil-card">
                                 <div class="mil-cover-frame">
-                                    <img src="https://navipromotions.in/img/images/project3.avif" alt="project">
+                                    <img src="img/images/shobi111.avif" alt="project">
                                 </div>
                                 <div class="mil-description">
                                     <div class="mil-card-title">
@@ -738,7 +754,7 @@
                                         <!-- <h6>by: <span class="mil-accent">Roy Bricks</span></h6> -->
                                     </div>
                                     <div class="mil-card-text">
-                                        <p>Enhancing beauty services with a seamless digital experience.</p>
+                                        <p>Digital Card</p>
                                     </div>
                                 </div>
                             </a>
