--- a/project10.html
+++ b/project10.html
@@ -120,7 +120,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                     </ul>
-                    <h1 class="mil-uppercase">Web Application for RG Dental Care</h1>
+                    <h1 class="mil-uppercase">Poster Design for Lavanya Nail Art</h1>
                 </div>
             </div>
         </div>
@@ -264,7 +264,7 @@
                     </div>
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="https://navipromotions.in/img/projects/lavanya-nailart-preview.jpg" alt="Lavanya Nail Art Website Preview">
+                            <img src="img/images/lavanya2.avif" alt="Lavanya Nail Art Website Preview">
                         </div>
                     </div>
                 </div>
@@ -305,7 +305,7 @@
                     </div>
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="https://navipromotions.in/img/projects/lavanya-nailart-results.jpg" alt="Lavanya Nail Art Website Results">
+                            <img src="img/images/lavanya3.avif" alt="Lavanya Nail Art Website Results">
                         </div>
                     </div>
                 </div>
