--- a/project11.html
+++ b/project11.html
@@ -120,7 +120,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                     </ul>
-                    <h1 class="mil-uppercase">Web Application for RG Dental Care</h1>
+                    <h1 class="mil-uppercase">Poster Design for Shobi Makeover</h1>
                 </div>
             </div>
         </div>
@@ -265,7 +265,7 @@
                     </div>
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="https://navipromotions.in/img/projects/shobi-makeover-preview.jpg" alt="Shobi Makeover Poster Preview">
+                            <img src="img/images/shobi22.jpg" alt="Shobi Makeover Poster Preview">
                         </div>
                     </div>
                 </div>
@@ -306,7 +306,7 @@
                     </div>
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="https://navipromotions.in/img/projects/shobi-makeover-results.jpg" alt="Shobi Makeover Poster Results">
+                            <img src="img/images/shobi33.avif" alt="Shobi Makeover Poster Results">
                         </div>
                     </div>
                 </div>
