--- a/project2.html
+++ b/project2.html
@@ -141,7 +141,7 @@
                             <h6 class="mil-mb-15">Xenex Engineering & Process Pte Ltd</h6>
                             <div class="mil-divider mil-divider-left mil-mb-30"></div>
                             <p class="mil-mb-10">Service</p>
-                            <h6 class="mil-mb-15">Fiberglass Engineering Solutions</h6>
+                            <h6 class="mil-mb-15">Web Application Development</h6>
                             <div class="mil-divider mil-divider-left mil-mb-30"></div>
                             <p class="mil-mb-10">Industry</p>
                             <h6 class="mil-mb-15">FRP / GRP</h6>
