--- a/project9.html
+++ b/project9.html
@@ -120,7 +120,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                     </ul>
-                    <h1 class="mil-uppercase">Web Application for RG Dental Care</h1>
+                    <h1 class="mil-uppercase">Banner Design for Shobi Makeover</h1>
                 </div>
             </div>
         </div>
@@ -263,7 +263,7 @@
                     </div>
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="https://navipromotions.in/img/projects/shobi-makeover-preview.jpg" alt="Shobi Makeover Website Preview">
+                            <img src="img/images/shobi2.jpg" alt="Shobi Makeover Website Preview">
                         </div>
                     </div>
                 </div>
@@ -304,7 +304,7 @@
                     </div>
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="https://navipromotions.in/img/projects/shobi-makeover-results.jpg" alt="Shobi Makeover Website Results">
+                            <img src="img/images/shobi3.jpg" alt="Shobi Makeover Website Results">
                         </div>
                     </div>
                 </div>
