--- a/project12.html
+++ b/project12.html
@@ -120,7 +120,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                     </ul>
-                    <h1 class="mil-uppercase">Web Application for RG Dental Care</h1>
+                    <h1 class="mil-uppercase">Video Marketing for Anaimalai Toyotas</h1>
                 </div>
             </div>
         </div>
@@ -266,7 +266,7 @@
                     </div>
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="https://navipromotions.in/img/projects/anaimalai-toyotas-preview.jpg" alt="Anaimalai Toyotas Video Preview">
+                            <img src="img/images/toyota2.jpg" alt="Anaimalai Toyotas Video Preview">
                         </div>
                     </div>
                 </div>
@@ -307,7 +307,7 @@
                     </div>
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="https://navipromotions.in/img/projects/anaimalai-toyotas-results.jpg" alt="Anaimalai Toyotas Video Results">
+                            <img src="img/images/toyota3.jpg" alt="Anaimalai Toyotas Video Results">
                         </div>
                     </div>
                 </div>
