--- a/project13.html
+++ b/project13.html
@@ -120,7 +120,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                     </ul>
-                    <h1 class="mil-uppercase">Web Application for RG Dental Care</h1>
+                    <h1 class="mil-uppercase">Digital Card for Shobi Makeover</h1>
                 </div>
             </div>
         </div>
@@ -267,7 +267,7 @@
                     </div>
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="https://navipromotions.in/img/projects/shobi-makeover-preview.jpg" alt="Shobi Makeover Digital Card Preview">
+                            <img src="img/images/shobi222.avif" alt="Shobi Makeover Digital Card Preview">
                         </div>
                     </div>
                 </div>
@@ -308,7 +308,7 @@
                     </div>
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="https://navipromotions.in/img/projects/shobi-makeover-results.jpg" alt="Shobi Makeover Digital Card Results">
+                            <img src="img/images/shobi333.avif" alt="Shobi Makeover Digital Card Results">
                         </div>
                     </div>
                 </div>
