--- a/project6.html
+++ b/project6.html
@@ -120,7 +120,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                     </ul>
-                    <h1 class="mil-uppercase">Web Application for RG Dental Care</h1>
+                    <h1 class="mil-uppercase">Web Application for Geminiganesan Audit & Tax Consultant</h1>
                 </div>
             </div>
         </div>
@@ -261,7 +261,7 @@
                     </div>
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="https://navipromotions.in/img/projects/dentalcare2.avif" alt="Website Preview">
+                            <img src="img/images/gemini2.avif" alt="Website Preview">
                         </div>
                     </div>
                 </div>
@@ -300,7 +300,7 @@
                     </div>
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="https://navipromotions.in/img/projects/dentalcare3.jpg" alt="Geminiganesan Audit & Tax Consultant">
+                            <img src="img/images/gemini3.avif" alt="Geminiganesan Audit & Tax Consultant">
                         </div>
                     </div>
                 </div>
