--- a/project7.html
+++ b/project7.html
@@ -120,7 +120,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                     </ul>
-                    <h1 class="mil-uppercase">Web Application for RG Dental Care</h1>
+                    <h1 class="mil-uppercase">Banner Design for Ara Aesthetics</h1>
                 </div>
             </div>
         </div>
@@ -262,7 +262,7 @@
                     </div>
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="https://navipromotions.in/img/projects/dentalcare2.avif" alt="Ara Aesthetics Website Preview">
+                            <img src="img/images/ara2.jpg" alt="Ara Aesthetics Website Preview">
                         </div>
                     </div>
                 </div>
@@ -301,7 +301,7 @@
                     </div>
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="https://navipromotions.in/img/projects/dentalcare3.jpg" alt="Ara Aesthetics Website">
+                            <img src="img/images/ara3.jpg" alt="Ara Aesthetics Website">
                         </div>
                     </div>
                 </div>
