--- a/project8.html
+++ b/project8.html
@@ -120,7 +120,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                     </ul>
-                    <h1 class="mil-uppercase">Web Application for RG Dental Care</h1>
+                    <h1 class="mil-uppercase">Banner Design for Athithya Guru Builders</h1>
                 </div>
             </div>
         </div>
@@ -265,7 +265,7 @@
                     </div>
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="https://navipromotions.in/img/projects/construction-website-preview.jpg" alt="Athithya Guru Builders Website Preview">
+                            <img src="img/images/athithya2.jpg" alt="Athithya Guru Builders Website Preview">
                         </div>
                     </div>
                 </div>
@@ -306,7 +306,7 @@
                     </div>
                     <div class="col-xl-6 mil-mb-60">
                         <div class="mil-project-cover">
-                            <img src="https://navipromotions.in/img/projects/construction-website-results.jpg" alt="Athithya Guru Builders Website">
+                            <img src="img/images/athithya3.jpg" alt="Athithya Guru Builders Website">
                         </div>
                     </div>
                 </div>
