adding client logos

--- a/index.html
+++ b/index.html
@@ -218,30 +218,30 @@
 
                 </div>
                 <div class="mil-partners-frame">
-                    <a href="#."><img src="https://navipromotions.in/img/partners/1.png" alt="partner"></a>
-                    <a href="#."><img src="https://navipromotions.in/img/partners/2.png" alt="partner"></a>
-                    <a href="#."><img src="https://navipromotions.in/img/partners/3.png" alt="partner"></a>
-                    <a href="#."><img src="https://navipromotions.in/img/partners/4.png" alt="partner"></a>
-                    <a href="#."><img src="https://navipromotions.in/img/partners/5.png" alt="partner"></a>
-                    <a href="#."><img src="https://navipromotions.in/img/partners/6.png" alt="partner"></a>
-                    <a href="#."><img src="https://navipromotions.in/img/partners/1.png" alt="partner"></a>
-                    <a href="#."><img src="https://navipromotions.in/img/partners/2.png" alt="partner"></a>
-                    <a href="#."><img src="https://navipromotions.in/img/partners/3.png" alt="partner"></a>
-                    <a href="#."><img src="https://navipromotions.in/img/partners/4.png" alt="partner"></a>
-                    <a href="#."><img src="https://navipromotions.in/img/partners/5.png" alt="partner"></a>
-                    <a href="#."><img src="https://navipromotions.in/img/partners/6.png" alt="partner"></a>
-                    <a href="#."><img src="https://navipromotions.in/img/partners/6.png" alt="partner"></a>
-                    <a href="#."><img src="https://navipromotions.in/img/partners/6.png" alt="partner"></a>
-                    <a href="#."><img src="https://navipromotions.in/img/partners/6.png" alt="partner"></a>
-                    <a href="#."><img src="https://navipromotions.in/img/partners/6.png" alt="partner"></a>
+                    <a href="#."><img src="img/partners/alagugym.png" alt="partner"></a>
+                    <a href="#."><img src="img/partners/anaaimalais.jpg" alt="partner"></a>
+                    <a href="#."><img src="img/partners/appaguru.jpeg" alt="partner"></a>
+                    <a href="#."><img src="img/partners/ara.png" alt="partner"></a>
+                    <a href="#."><img src="img/partners/athithya.png" alt="partner"></a>
+                    <a href="#."><img src="img/partners/lavanya.png" alt="partner"></a>
+                    <a href="#."><img src="img/partners/mma.png" alt="partner"></a>
+                    <a href="#."><img src="img/partners/pixelcctv.png" alt="partner"></a>
+                    <a href="#."><img src="img/partners/rgdental.png" alt="partner"></a>
+                    <a href="#."><img src="img/partners/sengheng.jpeg" alt="partner"></a>
+                    <a href="#."><img src="img/partners/shobimakeovers.png" alt="partner"></a>
+                    <a href="#."><img src="img/partners/tamilsangu.png" alt="partner"></a>
+                    <a href="#."><img src="img/partners/tej.jpeg" alt="partner"></a>
+                    <a href="#."><img src="img/partners/vertic.png" alt="partner"></a>
+                    <a href="#."><img src="img/partners/xenex.png" alt="partner"></a>
+                    <a href="#."><img src="img/partners/alagugym.png" alt="partner"></a>
                 </div>
             </div>
         </div>
         <!-- partners end -->
 
-        <!-- <div class="container">
+        <div class="container">
             <div class="mil-divider"></div>
-        </div> -->
+        </div>
 
 
                 <!-- services -->
