--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">
 
-    <title>Navi Promotions - Digital Marketing Company</title>
+    <title>Best Digital Marketing Company in Theni</title>
 </head>
 
 <body>
@@ -124,13 +124,13 @@
             <div class="swiper-container mil-banner-slideshow">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="https://navipromotions.in/img/images/home1.avif" class="mil-background-image" style="object-position: center" data-swiper-parallax="-100" data-swiper-parallax-scale="1.1" alt="image">
+                        <img src="https://navipromotions.in/img/images/home1.avif" class="mil-background-image" style="object-position: center" data-swiper-parallax="-100" data-swiper-parallax-scale="1.1" alt="hero-image">
                     </div>
                     <div class="swiper-slide">
-                        <img src="https://navipromotions.in/img/images/home2.webp" class="mil-background-image" style="object-position: center" data-swiper-parallax="-100" data-swiper-parallax-scale="1.1" alt="image">
+                        <img src="https://navipromotions.in/img/images/home2.webp" class="mil-background-image" style="object-position: center" data-swiper-parallax="-100" data-swiper-parallax-scale="1.1" alt="hero-image">
                     </div>
                     <div class="swiper-slide">
-                        <img src="https://navipromotions.in/img/images/home3.webp" class="mil-background-image" style="object-position: center" data-swiper-parallax="-100" data-swiper-parallax-scale="1.1" alt="image">
+                        <img src="https://navipromotions.in/img/images/home3.webp" class="mil-background-image" style="object-position: center" data-swiper-parallax="-100" data-swiper-parallax-scale="1.1" alt="hero-image">
                     </div>
                 </div>
             </div>
