--- a/blog-sec.html
+++ b/blog-sec.html
@@ -17,12 +17,12 @@
     <meta name="referrer" content="strict-origin-when-cross-origin">
 
     <meta http-equiv="X-Frame-Options" content="DENY">
-    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">
+    <meta name="description" content="Latest insights on digital trends from Navi Promotions – helping businesses in Dindigul and Madurai grow online.">
 
    
     <!-- itsulu css -->
     <link rel="stylesheet" href="https://navipromotions.in/css/style.css">
-    <title>Navi Promotions - Latest Blogs and Insights</title>
+    <title>Advanced Digital Strategies | Navi Promotions Blog – Best in Tamil Nadu</title>
 </head>
 
 <body>
