--- a/blog1.html
+++ b/blog1.html
@@ -18,9 +18,9 @@
 
     <meta http-equiv="X-Frame-Options" content="DENY">
 
-    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">    <!-- itsulu css -->
+    <meta name="description" content="Boost your brand visibility with expert SEO tips from Navi Promotions – trusted by Theni’s businesses.">   <!-- itsulu css -->
     <link rel="stylesheet" href="https://navipromotions.in/css/style.css">
-    <title>Navi Promotions - Branding for Growth</title>
+    <title>Top Web Design Trends | Navi Promotions – Tamil Nadu Digital Experts</title>
 </head>
 
 <body>
