--- a/blog4.html
+++ b/blog4.html
@@ -17,7 +17,7 @@
     <meta name="referrer" content="strict-origin-when-cross-origin">
 
     <meta http-equiv="X-Frame-Options" content="DENY">
-    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">    <!-- itsulu css -->
+    <meta name="description" content="Explore top content marketing strategies tailored for businesses in Theni and Virudhunagar. Boost engagement with Navi Promotions.">    <!-- itsulu css -->
     <link rel="stylesheet" href="https://navipromotions.in/css/style.css">
     <title>Navi Promotions - Why Every Business Needs Digital Marketing</title>
 </head>
