--- a/portfolio.html
+++ b/portfolio.html
@@ -19,8 +19,8 @@
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <meta http-equiv="X-Frame-Options" content="DENY">
 
-    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">
-    <title>Navi Promotions - Portfolio and Projects</title>
+    <meta name="description" content="Explore our creative portfolio of digital projects crafted for businesses in Madurai, Dindigul, Theni, and Virudhunagar.">
+    <title>Our Portfolio | Top Digital Marketing Projects in Theni, Madurai & Dindigul</title>
 
 </head>
 
