--- a/project10.html
+++ b/project10.html
@@ -18,8 +18,8 @@
     <link rel="canonical" href="https://navipromotions.in/project5.html">
     <meta name="referrer" content="strict-origin-when-cross-origin">
 
-    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">
-    <title>Navi Promotions - RG Dental Care</title>
+    <meta name="description" content="Implemented an interactive product catalog with inquiry features for a Dindigul-based manufacturer.">
+    <title>Community Outreach Web App | Navi Promotions – Empowering Periyakulam Digitally</title>
 </head>
 
 <body>
