--- a/project11.html
+++ b/project11.html
@@ -18,8 +18,8 @@
     <link rel="canonical" href="https://navipromotions.in/project5.html">
     <meta name="referrer" content="strict-origin-when-cross-origin">
 
-    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">
-    <title>Navi Promotions - RG Dental Care</title>
+    <meta name="description" content="Created a scalable blog website for local influencers and content creators in Virudhunagar.">
+    <title>Custom Web Development for E-Commerce | Navi Promotions – Digital Solutions for Theni & Madurai</title>
 </head>
 
 <body>
