--- a/project13.html
+++ b/project13.html
@@ -18,8 +18,8 @@
     <link rel="canonical" href="https://navipromotions.in/project5.html">
     <meta name="referrer" content="strict-origin-when-cross-origin">
 
-    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">
-    <title>Navi Promotions - RG Dental Care</title>
+    <meta name="description" content="Hear from our happy clients across Theni, Dindigul, Madurai, and Virudhunagar who trust Navi Promotions for digital excellence.">
+    <title>Responsive Web Design | Navi Promotions – Serving Madurai’s Digital Needs</title>
 </head>
 
 <body>
