--- a/project4.html
+++ b/project4.html
@@ -18,8 +18,8 @@
     <meta name="referrer" content="strict-origin-when-cross-origin">
 
     <link rel="canonical" href="https://navipromotions.in/project4.html">
-    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">
-    <title>Navi Promotions - Alagu Gym Web Application</title>
+    <meta name="description" content="Boosted traffic and visibility for a Theni-based business with targeted SEO and analytics integration.">
+    <title>Education Web Solutions | Navi Promotions – Best in Dindigul & Tamil Nadu</title>
 </head>
 
 <body>
