--- a/project6.html
+++ b/project6.html
@@ -18,8 +18,8 @@
     <link rel="canonical" href="https://navipromotions.in/project5.html">
     <meta name="referrer" content="strict-origin-when-cross-origin">
 
-    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">
-    <title>Navi Promotions - RG Dental Care</title>
+    <meta name="description" content="Delivered a feature-rich education website for a Dindigul-based institution to improve outreach and enrollment.">
+    <title>Creative Brand Website | Navi Promotions – Madurai's Digital Experts</title>
 </head>
 
 <body>
