--- a/project9.html
+++ b/project9.html
@@ -18,8 +18,8 @@
     <link rel="canonical" href="https://navipromotions.in/project5.html">
     <meta name="referrer" content="strict-origin-when-cross-origin">
 
-    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">
-    <title>Navi Promotions - RG Dental Care</title>
+    <meta name="description" content="Designed an optimized landing page for lead generation targeting the Theni business community.">
+    <title>Content Creator Platform | Navi Promotions – Digital Pioneers in Virudhunagar</title>
 </head>
 
 <body>
