--- a/services.html
+++ b/services.html
@@ -18,8 +18,8 @@
     <link rel="canonical" href="https://navipromotions.in/services.html">
     <meta name="referrer" content="strict-origin-when-cross-origin">
 
-    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">
-    <title>Navi Promotions - Our Services and Solutions</title>
+    <meta name="description" content="Navi Promotions offers SEO, web development, and digital branding services tailored for businesses in Theni, Dindigul, and surrounding areas.">
+    <title>Our Services | Best Digital Marketing, SEO & Web Design in Tamil Nadu</title>
 </head>
 
 <body>
