--- a/terms-condition.html
+++ b/terms-condition.html
@@ -15,12 +15,12 @@
     <link rel="stylesheet" href="https://navipromotions.in/css/plugins/swiper.min.css">
     <!-- itsulu css -->
     <link rel="stylesheet" href="https://navipromotions.in/css/style.css">
-    <title>Navi Promotions - Terms and Condition</title>
+    <title>Terms & Conditions | Navi Promotions – Best Digital Marketing Services</title>
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <meta http-equiv="X-Frame-Options" content="DENY">
 
     <link rel="canonical" href="https://navipromotions.in/terms-condition.html">
-    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence."></head>
+    <meta name="description" content="Read the terms and conditions of Navi Promotions – your trusted digital partner in Madurai, Dindigul, Theni, and beyond.">
 
 <body>
 
