--- a/404.html
+++ b/404.html
@@ -20,9 +20,9 @@
     <meta http-equiv="X-Frame-Options" content="DENY">
 
 
-    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">
+    <meta name="description" content="Oops! Page not found on Navi Promotions. Explore our digital services across Theni, Dindigul, Madurai, and more.">
      
-    <title>Navi Promotions - 404</title>
+    <title>Page Not Found | Navi Promotions – Best Digital Marketing in Tamil Nadu</title>
 </head>
 
 <body>
