--- a/about.html
+++ b/about.html
@@ -20,13 +20,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/all.min.css">
-    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">
+    <meta name="description" content="Discover Navi Promotions – your local expert in digital marketing and development across Theni, Dindigul, Virudhunagar, and beyond.">
 
     
     <!-- itsulu css -->
     <link rel="stylesheet" href="https://navipromotions.in/css/style.css">
     <link rel="icon" type="image/png" href="https://navipromotions.in/img/logo/icon-logo.png"> 
-    <title>Navi Promotions - About Us and Our Vision</title>
+    <title>About Navi Promotions | Best Digital Marketing Company in Tamil Nadu</title>
 </head>
 
 <body>
