--- a/blog-sec1.html
+++ b/blog-sec1.html
@@ -17,12 +17,12 @@
     <meta name="referrer" content="strict-origin-when-cross-origin">
 
     <meta http-equiv="X-Frame-Options" content="DENY">
-    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">
+    <meta name="description" content="Explore advanced marketing strategies and success stories from Theni, Periyakulam, and beyond.">
 
    
     <!-- itsulu css -->
     <link rel="stylesheet" href="https://navipromotions.in/css/style.css">
-    <title>Navi Promotions - Latest Blogs and Insights</title>
+    <title>Latest Trends in Digital Marketing | Navi Promotions Blog – Insights for Tamil Nadu</title>
 </head>
 
 <body>
