--- a/blog.html
+++ b/blog.html
@@ -20,7 +20,7 @@
 
     <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">    <!-- itsulu css -->
     <link rel="stylesheet" href="https://navipromotions.in/css/style.css">
-    <title>Navi Promotions - Blog Updates & Insights</title>
+    <title>Digital Marketing Tips & Insights | Navi Promotions Blog – Tamil Nadu</title>
 </head>
 
 <body>
