--- a/blog2.html
+++ b/blog2.html
@@ -16,9 +16,9 @@
     <link rel="canonical" href="https://navipromotions.in/blog2.html">
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <meta http-equiv="X-Frame-Options" content="DENY">
-    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">    <!-- itsulu css -->
+    <meta name="description" content="Explore creative website design ideas perfect for startups in Madurai and Dindigul.">    <!-- itsulu css -->
     <link rel="stylesheet" href="https://navipromotions.in/css/style.css">
-    <title>Navi Promotions - Social Media Success</title>
+    <title>Social Media Marketing Tips | Navi Promotions – Best in Madurai & Virudhunagar</title>
 </head>
 
 <body>
