--- a/blog3.html
+++ b/blog3.html
@@ -16,9 +16,9 @@
     <link rel="canonical" href="https://navipromotions.in/blog3.html">
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <meta http-equiv="X-Frame-Options" content="DENY">
-    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">    <!-- itsulu css -->
+    <meta name="description" content="Learn how digital ads are transforming small businesses in Periyakulam and Virudhunagar.">    <!-- itsulu css -->
     <link rel="stylesheet" href="https://navipromotions.in/css/style.css">
-    <title>Navi Promotions - Power of Outdoor Ads</title>
+    <title>Effective Branding Strategies | Navi Promotions – Dindigul's Best Digital Team</title>
 </head>
 
 <body>
