--- a/blog5.html
+++ b/blog5.html
@@ -17,9 +17,9 @@
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <meta http-equiv="X-Frame-Options" content="DENY">
 
-    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">    <!-- itsulu css -->
+    <meta name="description" content="Learn the secrets of social media growth from digital experts serving Madurai, Dindigul, and Periyakulam.">   <!-- itsulu css -->
     <link rel="stylesheet" href="https://navipromotions.in/css/style.css">
-    <title>Navi Promotions - Creating Buzz: The Art of Event Promotion</title>
+    <title>Smart Ad Campaigns | Navi Promotions Blog – Best Practices for Tamil Nadu</title>
 </head>
 
 <body>
