--- a/blog6.html
+++ b/blog6.html
@@ -17,9 +17,9 @@
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <meta http-equiv="X-Frame-Options" content="DENY">
 
-    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">    <!-- itsulu css -->
+    <meta name="description" content="Discover how local SEO helps small businesses in Theni and Dindigul rank higher and grow faster online.">   <!-- itsulu css -->
     <link rel="stylesheet" href="https://navipromotions.in/css/style.css">
-    <title>Navi Promotions - SEO & Content Strategy</title>
+    <title>Content Marketing Tips | Navi Promotions – Best in Digital Engagement</title>
 </head>
 
 <body>
