--- a/blog7.html
+++ b/blog7.html
@@ -17,9 +17,11 @@
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <meta http-equiv="X-Frame-Options" content="DENY">
 
-    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">    <!-- itsulu css -->
+    <meta name="description" content="Understand the power of branding and design in today's market – curated insights for businesses in Virudhunagar and nearby.">    <!-- itsulu css -->
     <link rel="stylesheet" href="https://navipromotions.in/css/style.css">
-    <title>Navi Promotions - SEO & Content Strategy</title>
+    <title>UI/UX for Better Results | Navi Promotions – Tamil Nadu's Leading Team</title>
+
+
 </head>
 
 <body>
