--- a/blog8.html
+++ b/blog8.html
@@ -17,9 +17,9 @@
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <meta http-equiv="X-Frame-Options" content="DENY">
 
-    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">    <!-- itsulu css -->
+    <meta name="description" content="Get ahead with performance marketing tips for startups in Periyakulam, Madurai, and Theni.">    <!-- itsulu css -->
     <link rel="stylesheet" href="https://navipromotions.in/css/style.css">
-    <title>Navi Promotions - SEO & Content Strategy</title>
+    <title>Effective Email Marketing | Navi Promotions – Best Digital Campaigns in Tamil Nadu</title>
 </head>
 
 <body>
