--- a/blog9.html
+++ b/blog9.html
@@ -17,9 +17,9 @@
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <meta http-equiv="X-Frame-Options" content="DENY">
 
-    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">    <!-- itsulu css -->
+    <meta name="description" content="Stay updated with the latest trends in web development from Navi Promotions, trusted by businesses across Dindigul and beyond.">    <!-- itsulu css -->
     <link rel="stylesheet" href="https://navipromotions.in/css/style.css">
-    <title>Navi Promotions - SEO & Content Strategy</title>
+    <title>Influencer Marketing Tips | Navi Promotions – Top Digital Growth Ideas for Theni & Madurai</title>
 </head>
 
 <body>
