--- a/careers.html
+++ b/careers.html
@@ -16,9 +16,9 @@
     <link rel="canonical" href="https://navipromotions.in/careers.html">
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <meta http-equiv="X-Frame-Options" content="DENY">
-    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">    <!-- itsulu css -->
+    <meta name="description" content="Join Navi Promotions and grow your career in digital marketing and web development. We're hiring talent across Theni and nearby regions.">    <!-- itsulu css -->
     <link rel="stylesheet" href="https://navipromotions.in/css/style.css">
-    <title>Navi Promotions - Careers and Opportunities</title>
+    <title>Careers at Navi Promotions | Join the Best Digital Marketing Team in Tamil Nadu</title>
 </head>
 
 <body>
