--- a/contact.html
+++ b/contact.html
@@ -17,11 +17,10 @@
     <meta name="referrer" content="strict-origin-when-cross-origin">
 
     <meta http-equiv="X-Frame-Options" content="DENY">
-    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">
-
+    <meta name="description" content="Get in touch with Navi Promotions. We’re here to assist businesses in Theni, Dindigul, Periyakulam, and Madurai with innovative solutions.">
     <!-- itsulu css -->
     <link rel="stylesheet" href="https://navipromotions.in/css/style.css">
-    <title>Navi Promotions - Get in Touch with Us</title>
+    <title>Contact Us | Navi Promotions – Top Digital Marketing Experts in Tamil Nadu</title>
 </head>
 
 <body>
