--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -19,9 +19,8 @@
     <meta name="referrer" content="strict-origin-when-cross-origin">
     <meta http-equiv="X-Frame-Options" content="DENY">
 
-    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">
-
-    <title>Navi Promotions - Privacy Policy</title>
+    <meta name="description" content="Your privacy matters to us. Navi Promotions ensures secure service for clients in Virudhunagar, Periyakulam, and across Tamil Nadu.">
+    <title>Privacy Policy | Navi Promotions – Trusted Digital Marketing in Tamil Nadu</title>
 </head>
 
 <body>
