--- a/project1.html
+++ b/project1.html
@@ -18,8 +18,8 @@
     <meta http-equiv="X-Frame-Options" content="DENY">
     <link rel="stylesheet" href="https://navipromotions.in/css/style.css">
     <link rel="canonical" href="https://navipromotions.in/project1.html">
-    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">
-    <title>Navi Promotions - Pixel cctv web application</title>
+    <meta name="description" content="Check out - A web development success story from Dindigul by Navi Promotions.">
+    <title>E-Commerce Site by Best Digital Agency | Navi Promotions – Madurai Retail Project</title>
 </head>
 
 <body>
