--- a/project12.html
+++ b/project12.html
@@ -18,8 +18,8 @@
     <link rel="canonical" href="https://navipromotions.in/project5.html">
     <meta name="referrer" content="strict-origin-when-cross-origin">
 
-    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">
-    <title>Navi Promotions - RG Dental Care</title>
+    <meta name="description" content="Built a bilingual web app to support rural outreach programs in Periyakulam and neighboring areas.">
+    <title>Branding & Social Media Strategy | Navi Promotions – Digital Marketing for Virudhunagar & Dindigul</title>
 </head>
 
 <body>
