--- a/project3.html
+++ b/project3.html
@@ -18,8 +18,8 @@
     <meta http-equiv="X-Frame-Options" content="DENY">
     <link rel="stylesheet" href="https://navipromotions.in/css/style.css">
     <link rel="canonical" href="https://navipromotions.in/project3.html">
-    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">
-    <title>Navi Promotions - Tamilsangu Publication</title>
+    <meta name="description" content="Developed a user-friendly e-commerce platform for a retail client in Madurai, enhancing online shopping experiences.">
+    <title>App Development by Best Digital Team | Navi Promotions – Virudhunagar Startup</title>
 </head>
 
 <body>
