--- a/project8.html
+++ b/project8.html
@@ -18,8 +18,8 @@
     <link rel="canonical" href="https://navipromotions.in/project5.html">
     <meta name="referrer" content="strict-origin-when-cross-origin">
 
-    <meta name="description" content="Navi Promotions offers digital marketing, branding, and promotional services to boost online presence.">
-    <title>Navi Promotions - RG Dental Care</title>
+    <meta name="description" content="Crafted a visually stunning portfolio site for a creative brand based in Madurai.">
+    <title>Digital Product Catalog | Navi Promotions – Best Digital Development in Dindigul</title>
 </head>
 
 <body>
