--- a/portfolio.html
+++ b/portfolio.html
@@ -391,6 +391,94 @@
                 
                     </div>
                 </div>
+
+
+                <!-- kkk makeup -->
+                <div class="row justify-content-between align-items-center">
+                    <div class="col-xl-6 mil-mb-60">
+
+                        <div class="mil-project-cover">
+                            <img src="img/images/kkk_makeup.avif" alt="KKK Makeup Studio Project">
+                        </div>
+
+                    </div>
+                    <div class="col-xl-5 mil-mb-60">
+
+                        <span class="mil-suptitle mil-suptitle-2 mil-mb-30">Empowering beauty brands with modern digital cards and online presence.</span>
+                        <h3 class="mil-mb-30">KKK Makeup Studio</h3>
+                        <a href="project14.html" class="mil-button-with-label">
+                            <div class="mil-button mil-border mil-icon-button"><span><i class="fas fa-plus"></i></span></div><span class="mil-dark">See More</span>
+                        </a>
+
+                    </div>
+                </div>
+
+
+                <!-- rn builders -->
+                <div class="row justify-content-between align-items-center">
+                    <div class="col-xl-6 mil-mb-60">
+
+                        <div class="mil-project-cover">
+                            <img src="img/images/rn_builders.avif" alt="RN Builders Construction Company Project">
+                        </div>
+
+                    </div>
+                    <div class="col-xl-5 mil-mb-60">
+
+                        <span class="mil-suptitle mil-suptitle-2 mil-mb-30">Empowering construction brands through dynamic websites and impactful digital presence.</span>
+                        <h3 class="mil-mb-30">RN Builders</h3>
+                        <a href="project15.html" class="mil-button-with-label">
+                            <div class="mil-button mil-border mil-icon-button"><span><i class="fas fa-plus"></i></span></div><span class="mil-dark">See More</span>
+                        </a>
+
+                    </div>
+                </div>
+
+
+                <!-- lexip automation -->
+                <div class="row justify-content-between align-items-center">
+                    <div class="col-xl-6 mil-mb-60">
+
+                        <div class="mil-project-cover">
+                            <img src="img/images/lexip_automation.avif" alt="Lexip Automation Industrial Automation Project">
+                        </div>
+
+                    </div>
+                    <div class="col-xl-5 mil-mb-60">
+
+                        <span class="mil-suptitle mil-suptitle-2 mil-mb-30">Delivering automation excellence with a modern digital identity and intuitive website experience.</span>
+                        <h3 class="mil-mb-30">Lexip Automation</h3>
+                        <a href="project16.html" class="mil-button-with-label">
+                            <div class="mil-button mil-border mil-icon-button"><span><i class="fas fa-plus"></i></span></div><span class="mil-dark">See More</span>
+                        </a>
+
+                    </div>
+                </div>
+
+
+                <!-- yg beauty world -->
+                <div class="row justify-content-between align-items-center">
+                    <div class="col-xl-6 mil-mb-60">
+
+                        <div class="mil-project-cover">
+                            <img src="img/images/yg_beauty_world.avif" alt="YG Beauty World Digital Card Showcase">
+                        </div>
+
+                    </div>
+                    <div class="col-xl-5 mil-mb-60">
+
+                        <span class="mil-suptitle mil-suptitle-2 mil-mb-30">Showcasing elegance and beauty through a sleek digital card with responsive web design and modern technologies.</span>
+                        <h3 class="mil-mb-30">YG Beauty World</h3>
+                        <a href="project17.html" class="mil-button-with-label">
+                            <div class="mil-button mil-border mil-icon-button"><span><i class="fas fa-plus"></i></span></div><span class="mil-dark">See More</span>
+                        </a>
+
+                    </div>
+                </div>
+
+
+
+
                 
 
 
